[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Nikita Yasnogorodskyi <nikita@orca.security>"]

[tool.poetry.dependencies]
python = "3.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
